--- a/portfolio-website/src/index.css
+++ b/portfolio-website/src/index.css
@@ -9,6 +9,7 @@
 	--green: #25d366;
 	--white: #fff;
 	--darkmode-background: #111111;
+	color-scheme: light only;
 }
 
 * {
